<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" style="@style/main_layout">

    <android.support.v7.widget.Toolbar android:id="@+id/toolbar" android:layout_alignParentTop="true" app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" app:popupTheme="@style/Theme.AppCompat.Light" style="@style/toolbar" />

    <LinearLayout android:layout_below="@+id/toolbar" android:layout_centerHorizontal="true" style="@style/main_inner_layout">

        <ListView android:id="@+id/list" style="@style/list_listview" />
        <TextView android:id="@+id/empty" android:drawableTop="@drawable/ic_new_releases_grey600_48dp" android:text="@string/main_list_empty" style="@style/list_empty_textview" />

    </LinearLayout>

    <View android:id="@+id/shadow" android:layout_below="@+id/toolbar" style="@style/toolbar_shadow" />

    <Button android:id="@+id/make_donation_button" android:layout_alignParentBottom="true" android:text="@string/main_make_donation" style="@style/main_make_donation_button" />

    <ImageButton android:id="@+id/fab" android:layout_alignParentEnd="true" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" android:src="@drawable/ic_add_white_24dp" android:contentDescription="@string/image_content_description" style="@style/fab" />

</RelativeLayout>